--- a/Linear-algebra/Lecture02.ipynb
+++ b/Linear-algebra/Lecture02.ipynb
@@ -33,9 +33,9 @@
     "* 消元的第二步可写成 $E_{3,2} = \\begin{bmatrix} 1 & 0 & 0 \\\\ 0 & 1 & 0 \\\\ 0 & -2 & 1 \\end{bmatrix}$，则变换过程为 $E_{3,2}\\begin{bmatrix} 1 & 2 & 1 \\\\ 0 & 2 & -1 \\\\ 0 & 4 & 1 \\end{bmatrix} = \\begin{bmatrix} 1 & 2 & 1 \\\\ 0 & -2 & -1 \\\\ 0 & 0 & 5 \\end{bmatrix}$\n",
     "* 如果将两步和在一起，可写成 $E_{3,2} (E_{2,1} A) = U \\Rightarrow (E_{3,2}E_{2,1})A = U$。注意：矩阵的乘法满足结合律，但不满足交换律。\n",
     "\n",
-    "**置换矩阵（Permutation Matrix）**可以将原矩阵的行或列进行互换。\n",
-    "* 行置换：$\\begin{bmatrix} 0 & 1\\\\ 1 & 0 \\end{bmatrix} \\begin{bmatrix} a & b\\\\ c & d \\end{bmatrix} = \\begin{bmatrix} c & d \\\\ a & b \\end{bmatrix}$。\n",
-    "* 列置换：$ \\begin{bmatrix} a & b\\\\ c & d \\end{bmatrix} \\begin{bmatrix} 0 & 1\\\\ 1 & 0 \\end{bmatrix} = \\begin{bmatrix} b & a \\\\ d & c \\end{bmatrix}$。"
+    "**置换矩阵（Permutation Matrix）**可以将原矩阵的行或列进行互换：\n",
+    "* 行置换，$\\begin{bmatrix} 0 & 1\\\\ 1 & 0 \\end{bmatrix} \\begin{bmatrix} a & b\\\\ c & d \\end{bmatrix} = \\begin{bmatrix} c & d \\\\ a & b \\end{bmatrix}$\n",
+    "* 列置换，$ \\begin{bmatrix} a & b\\\\ c & d \\end{bmatrix} \\begin{bmatrix} 0 & 1\\\\ 1 & 0 \\end{bmatrix} = \\begin{bmatrix} b & a \\\\ d & c \\end{bmatrix}$"
    ]
   },
   {
