--- a/Linear-algebra/Lecture03.ipynb
+++ b/Linear-algebra/Lecture03.ipynb
@@ -37,8 +37,25 @@
     "\n",
     "高斯诺尔当（Gaussian Jordan）方法可以一次求解多个方程组，也可以来求解方阵的逆矩阵。首先我们考虑求解矩阵 $A = \\begin{bmatrix} 1 & 3 \\\\ 2 & 7 \\end{bmatrix}$ 的逆矩阵，设 $A^{-1} = \\begin{bmatrix} a & c \\\\ b & d \\end{bmatrix}$，则 $\\begin{bmatrix} 1 & 3 \\\\ 2 & 7 \\end{bmatrix} \\begin{bmatrix} a & c \\\\ b & d \\end{bmatrix} = \\begin{bmatrix} 1 & 0 \\\\ 0 & 1 \\end{bmatrix}$。这里我们可以将它看成是两个方程组：$\\begin{bmatrix} 1 & 3 \\\\ 2 & 7 \\end{bmatrix} \\begin{bmatrix} a & c \\end{bmatrix} = \\begin{bmatrix} 1 \\\\ 0 \\end{bmatrix}$ 和 $\\begin{bmatrix} 1 & 3 \\\\ 2 & 7 \\end{bmatrix} \\begin{bmatrix} b & d \\end{bmatrix} = \\begin{bmatrix} 0 \\\\ 1 \\end{bmatrix}$。\n",
     "\n",
-    "根据高斯诺尔当方法，我们将两个矩阵合并后进行先正向消元：$\\left[\\begin{array}{cc|cc}1&3&1&0\\\\2&7&0&1\\end{array}\\right] \\xrightarrow{row_2-2row_1}\\left[\\begin{array}{cc|cc}1&3&1&0\\\\0&1&-2&1\\end{array}\\right]$，再进行逆向消元，即消除第一个方程中的第二个主元：$\\left[\\begin{array}{cc|cc}1&3&1&0\\\\0&1&-2&1\\end{array}\\right]\\xrightarrow{row_1-3row_2}\\left[\\begin{array}{cc|cc}1&0&7&-3\\\\0&1&-2&1\\end{array}\\right]$。此时，合并矩阵左边的矩阵 $A$ 变成了单位矩阵，而右边的单位矩阵矩阵则变成了矩阵 $A$ 的逆，即 $A^{-1} = \\begin{bmatrix}7&3\\\\1&-2\\end{bmatrix}$。证明：$[ A\\ |\\ I] \\Rightarrow [ A*A^{-1}\\ |\\ I*A^{-1}] \\Rightarrow [ I\\ |\\ A^{-1}]$。"
+    "根据高斯诺尔当方法，我们将两个矩阵合并后进行先正向消元：$\\left[\\begin{array}{cc|cc}1&3&1&0\\\\2&7&0&1\\end{array}\\right] \\xrightarrow{row_2-2row_1}\\left[\\begin{array}{cc|cc}1&3&1&0\\\\0&1&-2&1\\end{array}\\right]$，再进行逆向消元，即消除第一个方程中的第二个主元：$\\left[\\begin{array}{cc|cc}1&3&1&0\\\\0&1&-2&1\\end{array}\\right]\\xrightarrow{row_1-3row_2}\\left[\\begin{array}{cc|cc}1&0&7&-3\\\\0&1&-2&1\\end{array}\\right]$。此时，合并矩阵左边的矩阵 $A$ 变成了单位矩阵，而右边的单位矩阵矩阵则变成了矩阵 $A$ 的逆，即 $A^{-1} = \\begin{bmatrix}7&3\\\\1&-2\\end{bmatrix}$。证明：$[ A\\ |\\ I] \\Rightarrow [ A*A^{-1}\\ |\\ I*A^{-1}] \\Rightarrow [ I\\ |\\ A^{-1}]$。\n",
+    "\n",
+    "### 矩阵逆的性质\n",
+    "\n",
+    "如果矩阵 $C$ 是矩阵 $A$ 和矩阵 $B$ 的乘积，那么矩阵 $C$ 的逆等于矩阵 $B$ 的逆乘以矩阵 $A$ 的逆：$(AB)^{-1} = B^{-1}A{-1}$。证明，$A * B * B^{-1} * A^{-1} = A * A^{-1} = I$。\n",
+    "\n",
+    "矩阵 $A$ 转置的逆等于矩阵 $A$ 的逆的转置：$(A^T)^{-1} = (A^{-1})^T$。证明，$I^T = (A * A^{-1})^T \\Rightarrow (A^{-1})^TA^T = I$。\n",
+    "\n",
+    "一个矩阵的逆的逆等于它本身：$A = (A^{-1})^{-1}$。"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
