--- a/Linear-algebra/Lecture01.ipynb
+++ b/Linear-algebra/Lecture01.ipynb
@@ -6,14 +6,14 @@
    "source": [
     "# 第一讲 方程组的几何解释\n",
     "\n",
-    "线程方程有四种表示方式：方程形式、矩阵形式。\n",
+    "线程方程有两种表示方式：方程形式、矩阵形式。\n",
     "\n",
     "举一个简单的例子：两个方程，两个未知数 $x, y$，那么其**方程形式**为$\\left\\{\\begin{matrix} 2x & -y & = & 0\\\\ -x & +2y & = & 3 \\end{matrix}\\right.$。\n",
     "\n",
     "如果写成**矩阵形式**则为$\\begin{bmatrix} 2 & -1 \\\\  -1 & 2 \\end{bmatrix}\\begin{bmatrix} x \\\\ y \\end{bmatrix} = \\begin{bmatrix} 0 \\\\ 3 \\end{bmatrix}$，矩阵$\\begin{bmatrix} 2 & -1 \\\\  -1 & 2 \\end{bmatrix}$记作矩阵$A$，称为系数矩阵（the matrix of coefficients）；而矩阵$\\begin{bmatrix} x \\\\ y \\end{bmatrix}$一般记作矩阵$x$，称为未知向量（vector of unknown）；矩阵$\\begin{bmatrix} 0 \\\\ 3 \\end{bmatrix}$一般记作矩阵$b$，所以线性方程组可以表示为$Ax=b$。\n",
     "\n",
     "\n",
-    "考虑线性方程的几何解释，方程的**行图像**为："
+    "考虑线性方程的几何解释，行图像（Row Picture）和列图像（Column Picture），方程的**行图像**为："
    ]
   },
   {
