--- a/Linear-algebra/Lecture09.ipynb
+++ b/Linear-algebra/Lecture09.ipynb
@@ -130,7 +130,7 @@
     "* 向量组线性无关\n",
     "* 向量组组成平面\n",
     "\n",
-    "例如：对于三维空间 $R^3$ 的一组基，$\\begin{bmatrix}1\\\\0\\\\0 \\end{bmatrix}, \\begin{bmatrix}0\\\\1\\\\0 \\end{bmatrix}, \\begin{bmatrix}0\\\\0\\\\1 \\end{bmatrix}$。\n",
+    "例如：对于三维空间 $\\mathbb{R}^3$ 的一组基，$\\begin{bmatrix}1\\\\0\\\\0 \\end{bmatrix}, \\begin{bmatrix}0\\\\1\\\\0 \\end{bmatrix}, \\begin{bmatrix}0\\\\0\\\\1 \\end{bmatrix}$。\n",
     "\n",
     "对于向量空间 $R^n$，它的所有基均由 $n$ 个向量组成，而 $n$ 也称为该空间的维数（Dimension）。\n",
     "\n",
