--- a/Linear-algebra/Lecture10.ipynb
+++ b/Linear-algebra/Lecture10.ipynb
@@ -11,7 +11,7 @@
     "\n",
     "* 列空间（Column Space），记作 $C(A)$：$C(A) \\in \\mathbb{R}^m,\\ dimC(A) = r$\n",
     "* 零空间（Null Space），记作 $N(A)$：$N(A) \\in \\mathbb{R}^n,\\ dimN(A) = n - r$\n",
-    "* 行空间（Row Space），记作 $R(A)$：$R(A) \\in \\mathbb{R}^m,\\ dimR(A) = r$\n",
+    "* 行空间（Row Space），记作 $R(A)$：$R(A) \\in \\mathbb{R}^n,\\ dimR(A) = r$\n",
     "* 左零空间（Left Null Space），记作 $N(A^T)$：$N(A^T) \\in \\mathbb{R}^m,\\ dimN(A^T) = m - r$\n",
     "\n",
     "\n",
