--- a/Linear-algebra/Lecture01.ipynb
+++ b/Linear-algebra/Lecture01.ipynb
@@ -8,9 +8,9 @@
     "\n",
     "线程方程有两种表示方式：方程形式、矩阵形式。\n",
     "\n",
-    "举一个简单的例子：两个方程，两个未知数 $x, y$，那么其**方程形式**为$\\left\\{\\begin{matrix} 2x & -y & = & 0\\\\ -x & +2y & = & 3 \\end{matrix}\\right.$。\n",
+    "举一个简单的例子：两个方程，两个未知数 $x, y$，它的**方程形式**有$\\left\\{\\begin{matrix} 2x & -y & = & 0\\\\ -x & +2y & = & 3 \\end{matrix}\\right.$。\n",
     "\n",
-    "如果写成**矩阵形式**则为$\\begin{bmatrix} 2 & -1 \\\\  -1 & 2 \\end{bmatrix}\\begin{bmatrix} x \\\\ y \\end{bmatrix} = \\begin{bmatrix} 0 \\\\ 3 \\end{bmatrix}$，矩阵$\\begin{bmatrix} 2 & -1 \\\\  -1 & 2 \\end{bmatrix}$记作矩阵$A$，称为系数矩阵（the matrix of coefficients）；而矩阵$\\begin{bmatrix} x \\\\ y \\end{bmatrix}$一般记作矩阵$x$，称为未知向量（vector of unknown）；矩阵$\\begin{bmatrix} 0 \\\\ 3 \\end{bmatrix}$一般记作矩阵$b$，所以线性方程组可以表示为$Ax=b$。\n",
+    "如果写成**矩阵形式**则为$\\begin{bmatrix} 2 & -1 \\\\  -1 & 2 \\end{bmatrix}\\begin{bmatrix} x \\\\ y \\end{bmatrix} = \\begin{bmatrix} 0 \\\\ 3 \\end{bmatrix}$，矩阵$\\begin{bmatrix} 2 & -1 \\\\  -1 & 2 \\end{bmatrix}$记作矩阵 $A$，称为系数矩阵（the Matrix of Coefficients）；而矩阵$\\begin{bmatrix} x \\\\ y \\end{bmatrix}$一般记作 $x$，称为未知向量（Vector of Unknown）；矩阵$\\begin{bmatrix} 0 \\\\ 3 \\end{bmatrix}$一般记作 $b$，于是所有的线性方程组可以表示为$Ax=b$。\n",
     "\n",
     "\n",
     "考虑线性方程的几何解释，行图像（Row Picture）和列图像（Column Picture），方程的**行图像**为："
@@ -52,7 +52,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "上图中的两条直线分别代表线性方程的两个方程。**列图像**则用向量的方式去解释，则有$x \\begin{bmatrix} 2 \\\\ -1 \\end{bmatrix} + y \\begin{bmatrix} -1 \\\\ 2 \\end{bmatrix} = \\begin{bmatrix} 0 \\\\ 3 \\end{bmatrix}$，当$x=1, y=2$时，等式成立，即一倍的$\\begin{bmatrix} 2 \\\\ -1 \\end{bmatrix}$加上两倍的$\\begin{bmatrix} -1 \\\\ 2 \\end{bmatrix}$等于 $\\begin{bmatrix} 0 \\\\ 3 \\end{bmatrix}$。"
+    "上图中的两条直线分别代表线性方程的两个方程，即每一个方程表示一条直线，而方程组的解即为两条直线的交点。\n",
+    "\n",
+    "**列图像**则是用向量的方式去解释，有$x \\begin{bmatrix} 2 \\\\ -1 \\end{bmatrix} + y \\begin{bmatrix} -1 \\\\ 2 \\end{bmatrix} = \\begin{bmatrix} 0 \\\\ 3 \\end{bmatrix}$，当$x=1, y=2$时，等式成立，即一倍的$\\begin{bmatrix} 2 \\\\ -1 \\end{bmatrix}$加上两倍的$\\begin{bmatrix} -1 \\\\ 2 \\end{bmatrix}$等于 $\\begin{bmatrix} 0 \\\\ 3 \\end{bmatrix}$。"
    ]
   },
   {
