--- a/Linear-algebra/Lecture06.ipynb
+++ b/Linear-algebra/Lecture06.ipynb
@@ -8,7 +8,7 @@
     "\n",
     "如果有两个向量空间 $S$ 和 $T$，$S \\cup T$ 不一定是一个向量空间，但是 $S \\cap T$ 一定是一个向量空间。\n",
     "\n",
-    "证明 $S \\cap T$ 一定是一个向量空间，假设有向量 $v, w$，并且 $v, w \\in S$，$v, w \\in T$，因为 $S，T$ 都是向量空间，所以所有 $v, w$ 的线性组合均在向量空间 $S, T$ 中，即 $v + w \\in T$，$v + w \\in S$。因此，$v + w \\in S \\cap T$。\n",
+    "证明 $S \\cap T$ 一定是一个向量空间，假设有向量 $v, w$，并且 $v, w \\in S$，$v, w \\in T$，即 $v, w \\in S \\cap T$。因为 $S，T$ 都是向量空间，所以所有 $v, w$ 的线性组合均在向量空间 $S, T$ 中，即 $v + w \\in T$，$v + w \\in S$。因此，$v + w \\in S \\cap T$。\n",
     "\n",
     "## 列空间\n",
     "\n",
@@ -22,6 +22,15 @@
     "\n",
     "对于 $b \\neq 0$ 的解不能组成向量空间。"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
