LA-fixed lecture07-10

--- a/Linear-algebra/Lecture07.ipynb
+++ b/Linear-algebra/Lecture07.ipynb
@@ -28,10 +28,19 @@
    "source": [
     "除了通过常规方法求解特解，还可以通过矩阵变换得到特解。将矩阵的阶梯形式进一步消元，得到主元上下均为 $0$，主元为 $1$ 的简化行阶梯形式（Reduced Row Echelon Form），记作 $R$。然后忽略为 $0$ 的无用行，对矩阵 $R$ 进行列置换，得到 $[I\\ F]$ 的形式，即将主元列和自由列分开。最后，自由列中的每一列的值取相反数即为一个特解。\n",
     "\n",
-    "证明：现有 $R = \\begin{bmatrix} I & R \\\\  0 & 0 \\end{bmatrix}$，假设特解组成的矩阵为 $N = \\begin{bmatrix} -F \\\\ I  \\end{bmatrix}$，那么 $RN = [IF - IF\\ 0] = 0$。 \n",
+    "证明：现有 $R = \\begin{bmatrix} I & F \\\\  0 & 0 \\end{bmatrix}$，假设特解组成的矩阵为 $N = \\begin{bmatrix} -F \\\\ I  \\end{bmatrix}$，那么 $RN = [IF - IF\\ 0] = 0$。 \n",
     "\n",
     "仍以  $A = \\begin{bmatrix} 1 & 2 & 2 & 2 \\\\  2 & 4 & 6 & 8 \\\\ 3 & 6 & 8 & 10 \\end{bmatrix}$ 为例，其对应的 $R = \\begin{bmatrix} 1 & 2 & 0 & -2 \\\\  0 & 0 & 1 & 2 \\\\ 0 & 0 & 0 & 0 \\end{bmatrix}$。进行变化，得到新的矩阵 $R = \\begin{bmatrix} 1 & 0 & 2 & -2 \\\\  0 & 1 & 0 & 2 \\end{bmatrix}$。"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
