--- a/Linear-algebra/Lecture09.ipynb
+++ b/Linear-algebra/Lecture09.ipynb
@@ -8,7 +8,7 @@
     "\n",
     "## 线性相关性\n",
     "\n",
-    "对于一组向量 $v_1, v_2, \\dots, v_n$ 而言，如果没有任何非零的线性组合可以得到零向量，那么这组向量就是线性无关的（Linear Independence）。如果这组向量组成矩阵 $A$，那么当 $A$ 的零空间中有且仅有 $0$ 向量时，各向量线性无关，此时 $rank(A)=n$，并且没有自由变量；当存在非零向量 $c$ 使得 $Ac=0$，则存在线性相关向量，此时 $rank(A)<n$，并且有自由变量。"
+    "对于一组向量 $v_1, v_2, \\dots, v_n$ 而言，如果没有任何非零的线性组合可以得到零向量，那么这组向量就是线性无关的（Linear Independence）。如果这组向量组成矩阵 $A$，那么矩阵 $A$ 的零空间中有且仅有 $0$ 向量，此时 $rank(A)=n$，并且没有自由变量；当存在非零向量 $c$ 使得 $Ac=0$，则存在线性相关向量，此时 $rank(A)<n$，并且有自由变量。"
    ]
   },
   {
