--- a/Linear-algebra/README.ipynb
+++ b/Linear-algebra/README.ipynb
@@ -25,7 +25,7 @@
     "* [第五讲 转置-置换-向量R](http://nbviewer.jupyter.org/github/JeraKrs/Notes/blob/master/Linear-algebra/Lecture05.ipynb)\n",
     "* [第六讲 列空间和零空间](http://nbviewer.jupyter.org/github/JeraKrs/Notes/blob/master/Linear-algebra/Lecture06.ipynb)\n",
     "* [第七讲 求解Ax=0：主变量、特解](http://nbviewer.jupyter.org/github/JeraKrs/Notes/blob/master/Linear-algebra/Lecture07.ipynb)\n",
-    "* [第八讲 求解Ax=0：可解性和解的结构](http://nbviewer.jupyter.org/github/JeraKrs/Notes/blob/master/Linear-algebra/Lecture08.ipynb)\n",
+    "* [第八讲 求解Ax=b：可解性和解的结构](http://nbviewer.jupyter.org/github/JeraKrs/Notes/blob/master/Linear-algebra/Lecture08.ipynb)\n",
     "* [第九讲 线性相关性、基、维数](http://nbviewer.jupyter.org/github/JeraKrs/Notes/blob/master/Linear-algebra/Lecture09.ipynb)\n",
     "* [第十讲 四个基本子空间](http://nbviewer.jupyter.org/github/JeraKrs/Notes/blob/master/Linear-algebra/Lecture10.ipynb)\n",
     "* [第十一讲 矩阵空间、秩1矩阵和小世界图](http://nbviewer.jupyter.org/github/JeraKrs/Notes/blob/master/Linear-algebra/Lecture11.ipynb)\n",
@@ -61,6 +61,15 @@
     "* Introduction to Linear Algebra（[豆瓣](https://book.douban.com/subject/3582335/)），作者 Gilbert Strang。\n",
     "* 线性代数笔记（[Github](https://github.com/zlotus/notes-linear-algebra/blob/master/ReadMe.md)），作者 子实。\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
