LA-fixed lecture11-13

--- a/Linear-algebra/Lecture11.ipynb
+++ b/Linear-algebra/Lecture11.ipynb
@@ -12,7 +12,12 @@
     "\n",
     "对于 $3 * 3$ 的矩阵空间，它的维度 $dimM = 9$，而它的标准基：$$\\begin{bmatrix} 1 & 0 & 0\\\\ 0 & 0 & 0 \\\\ 0 & 0 & 0 \\end{bmatrix}, \\begin{bmatrix} 0 & 1 & 0\\\\ 0 & 0 & 0 \\\\ 0 & 0 & 0 \\end{bmatrix}, \\begin{bmatrix} 0 & 0 & 1\\\\ 0 & 0 & 0 \\\\ 0 & 0 & 0 \\end{bmatrix}, \\begin{bmatrix} 0 & 0 & 0\\\\ 1 & 0 & 0 \\\\ 0 & 0 & 0 \\end{bmatrix},\\begin{bmatrix} 0 & 0 & 0\\\\ 0 & 1 & 0 \\\\ 0 & 0 & 0 \\end{bmatrix},  \\begin{bmatrix} 0 & 0 & 0\\\\ 0 & 0 & 1 \\\\ 0 & 0 & 0 \\end{bmatrix}, \\begin{bmatrix} 0 & 0 & 0 \\\\ 0 & 0 & 0 \\\\ 1 & 0 & 0 \\end{bmatrix}, \\begin{bmatrix} 0 & 0 & 0 \\\\ 0 & 0 & 0 \\\\ 0 & 1 & 0 \\end{bmatrix}, \\begin{bmatrix} 0 & 0 & 0\\\\ 0 & 0 & 0 \\\\ 0 & 0 & 1 \\end{bmatrix}$$\n",
     "\n",
-    "而 $M$ 的子空间对称矩阵（$S$），$dimS = 6$；上三角矩阵（$U$），$dimU = 6$；对角线矩阵（$D$），$dimD = 3$。注意：矩阵 $S \\cup U$ 不是一个矩阵空间，而矩阵 $S \\cap U = D$，矩阵 $S + U = M$ 均为矩阵空间。可以看出 $dimM + dimD = dimS + dimU$。"
+    "而 $M$ 的子空间有：\n",
+    "* 对称矩阵（$S$），$dimS = 6$\n",
+    "* 上三角矩阵（$U$），$dimU = 6$\n",
+    "* 对角线矩阵（$D$），$dimD = 3$\n",
+    "\n",
+    "注意：矩阵 $S \\cup U$ 不是一个矩阵空间，而矩阵 $S \\cap U = D$，矩阵 $S + U = M$ 均为矩阵空间，并且有 $dimM + dimD = dimS + dimU$。"
    ]
   },
   {
@@ -21,11 +26,9 @@
    "source": [
     "## 秩1矩阵\n",
     "\n",
-    "秩1矩阵（Rank 1 Matrix）即矩阵的秩等于1的矩阵，它的特殊性质在于可以划分为 $UV^T$ 形式，其中 $V$ 为基。并且所有的矩阵均可以有多个秩1矩阵组合得到。\n",
+    "秩1矩阵（Rank 1 Matrix）即矩阵秩等于1的矩阵，它的特殊性质在于可以划分为 $UV^T$ 形式，其中 $V$ 为基。并且所有的矩阵均可以由多个秩1矩阵组合得到。注意：一个秩为 $a$ 的矩阵加上一个秩为 $b$ 的矩阵，通常得到的矩阵秩大于 $a, b$ 小于 $a + b$。\n",
     "\n",
-    "注意：一个秩为 $a$ 的矩阵加上一个秩为 $b$ 的矩阵，通常得到的矩阵秩大于 $a, b$ 小于 $a + b$。\n",
-    "\n",
-    "考虑 $\\mathbb{R}^4$ 中的所有满足 $v_1 + v_2 + v_3 + v4 = 0$ 的向量 $v = \\begin{bmatrix} v_1 & v_2 & v_3 & v_4 \\end{bmatrix}^T$ 组成向量空间 $S$，并且 $S$ 一定是 $\\mathbb{R}^4$ 的向量子空间。从另一个角度看，$v_1 + v_2 + v_3 + v4 = 0$ 等价于 $[1,\\ 1,\\ 1, 1]\\begin{bmatrix} v_1 & v_2 & v_3 & v_4 \\end{bmatrix}^T = 0$，则 $S$ 为矩阵 $[1,\\ 1,\\ 1, 1]$ 的零空间。\n",
+    "考虑 $\\mathbb{R}^4$ 中的所有满足 $v_1 + v_2 + v_3 + v_4 = 0$ 的向量 $v = \\begin{bmatrix} v_1 \\\\ v_2 \\\\ v_3 \\\\ v_4 \\end{bmatrix}$，组成的向量空间 $S$，$S$ 一定是 $\\mathbb{R}^4$ 的向量子空间。从另一个角度看，$v_1 + v_2 + v_3 + v4 = 0$ 等价于 $[1,\\ 1,\\ 1, 1]\\begin{bmatrix} v_1 \\\\ v_2 \\\\ v_3 \\\\ v_4 \\end{bmatrix} = 0$，则 $S$ 为矩阵 $[1,\\ 1,\\ 1, 1]$ 的零空间。\n",
     "\n"
    ]
   },
