--- a/Linear-algebra/Lecture12.ipynb
+++ b/Linear-algebra/Lecture12.ipynb
@@ -43,7 +43,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "图对应的边关系如表：\n",
+    "该图对应的边关系如表：\n",
     "$$\\begin{array}{c | c c c c} \n",
     "& node_1 & node_2 & node_3 & node_4 \\\\ \n",
     "\\hline \n",
@@ -56,11 +56,11 @@
     "\n",
     "关联矩阵（Incidence Matrix），上图的关联矩阵 $A = \\begin{bmatrix} -1 & 1 & 0 & 0 \\\\ 0 & -1 & 1 & 0 \\\\ -1 & 0 & 1 & 0 \\\\ -1 & 0 & 0 & 1 \\\\ 0 & 0 & -1 & 1\\end{bmatrix}$，矩阵的前三行是线性相关的，对应图中的三条边形成回路（Loop）。\n",
     "\n",
-    "引入未知变量 $x$，令 $Ax = 0$，$\\begin{bmatrix} -1 & 1 & 0 & 0 \\\\ 0 & -1 & 1 & 0 \\\\ -1 & 0 & 1 & 0 \\\\ -1 & 0 & 0 & 1 \\\\ 0 & 0 & -1 & 1\\end{bmatrix}\\begin{bmatrix}x_1 \\\\ x_2 \\\\ x_3 \\\\ x_4\\end{bmatrix} = \\begin{bmatrix}0 \\\\ 0 \\\\ 0 \\\\ 0\\end{bmatrix} \\Rightarrow \\begin{bmatrix}x_2-x_1 \\\\ x_3-x_2 \\\\ x_3-x_1 \\\\ x_4-x_1 \\\\ x_4 - x_3\\end{bmatrix} = \\begin{bmatrix}0 \\\\ 0 \\\\ 0 \\\\ 0 \\\\ 0 \\end{bmatrix}$。\n",
+    "引入未知变量 $x$，令 $Ax = 0$，$\\begin{bmatrix} -1 & 1 & 0 & 0 \\\\ 0 & -1 & 1 & 0 \\\\ -1 & 0 & 1 & 0 \\\\ -1 & 0 & 0 & 1 \\\\ 0 & 0 & -1 & 1\\end{bmatrix}\\begin{bmatrix}x_1 \\\\ x_2 \\\\ x_3 \\\\ x_4\\end{bmatrix} = \\begin{bmatrix}0 \\\\ 0 \\\\ 0 \\\\ 0 \\\\ 0\\end{bmatrix} \\Rightarrow \\begin{bmatrix}x_2-x_1 \\\\ x_3-x_2 \\\\ x_3-x_1 \\\\ x_4-x_1 \\\\ x_4 - x_3\\end{bmatrix} = \\begin{bmatrix}0 \\\\ 0 \\\\ 0 \\\\ 0 \\\\ 0 \\end{bmatrix}$。\n",
     "\n",
-    "考虑图的实际意义，设 $x = [x_1\\ x_2\\ x_3\\ x_4]$ 为结点的电势（Potential），则 $x_2 - x_1$ 可以看作边上的电势差（Potential Difference）。\n",
+    "考虑图的实际意义，设 $x = \\begin{bmatrix}x_1 \\\\ x_2 \\\\ x_3 \\\\ x_4\\end{bmatrix}$ 为结点的电势（Potential），则 $x_2 - x_1$ 可以看作边上的电势差（Potential Difference）。\n",
     "\n",
-    "$x = [1\\ 1\\ 1\\ 1]$ 为 $Ax = 0$ 的一个解，即为等电势的情况。不难发现，$x = [1\\ 1\\ 1\\ 1]$ 即为零空间的一组基。"
+    "$x = \\begin{bmatrix}1 \\\\ 1 \\\\ 1 \\\\ 1\\end{bmatrix}$ 为 $Ax = 0$ 的一个解，即为等电势的情况。不难发现，$x = \\begin{bmatrix}1 \\\\ 1 \\\\ 1 \\\\ 1\\end{bmatrix}$ 即为零空间的一组基。"
    ]
   },
   {
@@ -74,7 +74,7 @@
     "解得 $N(A^T)$ 的一组基：$\\begin{bmatrix}1\\\\1\\\\-1\\\\0\\\\0\\end{bmatrix},\\begin{bmatrix}0\\\\0\\\\1\\\\-1\\\\1\\end{bmatrix}$，而左零空间中的基，对应的即为图中的回路。相反，如果矩阵 $A^T$ 中的列向量线性无关，说明图中没有存在回路，没有回路的图也称为树（Tree）。\n",
     "\n",
     "\n",
-    "当 $A^T$ 中的列向量线性无关时，秩 $r = n - 1 = nodes - 1$，而左零空间的维数就是相互无关的回路的数量，$dimN(A^T) = m - r = edges - (nodes - 1)$，该公式适用于所有图，也称欧拉公式（Euler's Formula）。可以理解称一个树只有结点数减一的边，那么多出来的每条边均会形成一个回路。\n"
+    "当 $A^T$ 中的列向量线性无关时，秩 $r = n - 1 = nodes - 1$，而左零空间的维数就是相互无关的回路的数量，$dimN(A^T) = m - r = edges - (nodes - 1)$，该公式适用于所有图，也称欧拉公式（Euler's Formula）。可以理解成一个树只有结点数减一的边，那么多出来的每条边均会形成一个回路。\n"
    ]
   },
   {
